--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /node_modules
 /public/storage
-/public/hot
 /storage/*.key
+/public/buildresults.html
+/public/testresults.html
+/public/robots.txt
+/config/seeding.php
+/config/github.php
 /vendor
 /.idea
 Homestead.json
